force-app/main/default/objects/ImplementationData__c/ImplementationData__c.object-meta.xml
<CustomObject>
    <label>Implementation Data</label>
    <nameField>
        <displayFormat>IDN{0000}</displayFormat>
        <label>Implementation Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Implementation Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>