force-app/main/default/objects/ImplementationData__c/fields/ElectricitySavingsMWh__c.field-meta.xml
<CustomField>
    <fullName>ElectricitySavingsMWh__c</fullName>
    <label>Electricity Savings(MWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>