force-app/main/default/objects/ImplementationData__c/fields/GasSavingsMWh__c.field-meta.xml
<CustomField>
    <fullName>GasSavingsMWh__c</fullName>
    <label>Gas Savings (MWh)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>