force-app/main/default/objects/ImplementationData__c/fields/Implementation_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Implementation Date</label>
    <type>Date</type>
</CustomField>