force-app/main/default/objects/ImplementationData__c/fields/Postcode__c.field-meta.xml
<CustomField>
    <fullName>Postcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>