force-app/main/default/objects/ImplementationData__c/fields/Suburb__c.field-meta.xml
<CustomField>
    <fullName>Suburb__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>