force-app/main/default/objects/ImplementationData__c/fields/TotalSavings__c.field-meta.xml
<CustomField>
    <fullName>TotalSavings__c</fullName>
    <formula>ElectricitySavingsMWh__c  +  GasSavingsMWh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>