force-app/main/default/objects/ImplementationData__c/fields/WorkflowBatch__c.field-meta.xml
<CustomField>
    <fullName>WorkflowBatch__c</fullName>
    <label>Workflow Batch</label>
    <referenceTo>WorkflowBatch__c</referenceTo>
    <relationshipLabel>Implementation Data</relationshipLabel>
    <relationshipName>Implementation_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>